--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "gsap": "^3.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^3.0.1",
     "split-type": "^0.3.4",
     "styled-component": "^2.8.0",
