--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.12.7",
     "react": "^19.1.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^19.1.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
