--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "styled-components": "^6.1.17",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://jiyu-in.github.io/portfolio/",
+  "homepage": "https://jiyu-in.github.io/portfolio",
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
